--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 ---
 version: 0.03
-date:    Sat Jul 20 11:33:34 BRT 2013
+date:    Sat Sep 14 14:37:47 PDT 2013
 changes:
 - Add Dist::Zilla support
 - Add Module::Build support
