--- a/README
+++ b/README
@@ -40,7 +40,7 @@ AUTHOR
     Ingy döt Net <ingy@ingy.net>
 
 COPYRIGHT AND LICENSE
-    Copyright (c) 2011. Ingy döt Net.
+    Copyright (c) 2011, 2013. Ingy döt Net.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
