--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.18
+date:    Fri Aug 15 15:51:03 PDT 2014
+changes:
+- Add t/000-compile-modules.t
+- CPAN Day 2014 - 21 Release Salute!
+---
 version: 0.17
 date:    Wed Jul 30 15:43:35 PDT 2014
 changes:
