--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.19
+date:    Fri Aug 15 21:19:50 PDT 2014
+changes:
+- Remove t/use_ok.t
+---
 version: 0.18
 date:    Fri Aug 15 15:51:03 PDT 2014
 changes:
