--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.20
+date:    Sat Aug 16 00:59:45 PDT 2014
+changes:
+- Eliminate File::Basename from test/
+---
 version: 0.19
 date:    Fri Aug 15 21:19:50 PDT 2014
 changes:
