--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.21
+date:    Sat Aug 16 11:10:03 PDT 2014
+changes:
+- Meta 0.0.2
+---
 version: 0.20
 date:    Sat Aug 16 00:59:45 PDT 2014
 changes:
