--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.22
+date:    Sat Aug 16 14:43:35 PDT 2014
+changes:
+- Change Meta email
+---
 version: 0.21
 date:    Sat Aug 16 11:10:03 PDT 2014
 changes:
