--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.23
+date:    Sat Aug 16 15:47:38 PDT 2014
+changes:
+- Remove versions from module use
+---
 version: 0.22
 date:    Sat Aug 16 14:43:35 PDT 2014
 changes:
