--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.24
+date:    Sat Aug 16 16:00:30 PDT 2014
+changes:
+- Fix strict/warnings
+---
 version: 0.23
 date:    Sat Aug 16 15:47:38 PDT 2014
 changes:
