--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.25
+date:    Thu Aug 21 11:59:42 PDT 2014
+changes:
+- Doc fix via PR/10. @wollmers++
+---
 version: 0.24
 date:    Sat Aug 16 16:00:30 PDT 2014
 changes:
