--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.26
+date:    Mon 25 Jul 2022 05:16:08 PM PDT
+changes:
+- Fix for blib
+---
 version: 0.25
 date:    Thu Aug 21 11:59:42 PDT 2014
 changes:
